--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^10.0.0",
     "ethereumjs-wallet": "^1.0.2",
     "express": "^4.17.1",
+    "human-standard-token-abi": "^2.0.0",
     "node-fetch": "^3.0.0",
     "redis": "^3.1.2",
     "web3": "^1.6.0"
